--- a/src/style.css
+++ b/src/style.css
@@ -11,3 +11,87 @@ body {
     border-radius: 16px;
     box-shadow:0 30px 50px rgba(65, 50, 100, 0.08); ;
 }
+
+header {
+    border-bottom: 1px solid #f9f7fe;
+    padding: 0 0 30px 0;
+}
+
+.search-form-input {
+    background-color: #f9f7fe;
+    padding: 15px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 4px;
+    width: 80%;
+}
+
+.search-form-button {
+    background: #885df1;;
+    color: white;
+    padding: 15px 30px;
+    margin-left: 5px;
+    font-size: 16px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+main {
+    padding: 30px 0;
+}
+
+.weater-app-data {
+    display: flex;
+    justify-content: space-between;
+}
+
+.weater-app-city {
+    margin: 0;
+    font-size: 38px;
+    line-height: 48px;
+}
+
+.weater-app-details {
+    font-size: 16px;
+    line-height: 20px;
+    color: rgba(39, 33, 66, 0.4);
+    font-weight: 500;
+}
+
+.weater-app-details strong {
+    color:#f65282;
+}
+
+.weater-app-temperature-container {
+    display: flex;
+}
+
+.weater-app-icon {
+    font-size: 44px;
+    margin-top: 22px;
+}
+
+.weater-app-temperature {
+    font-size: 88px;
+    font-weight: bold;
+    margin-left: 10px;
+}
+
+.weater-app-unit {
+    font-size: 28px;
+    margin-top:16px ;
+}
+
+footer {
+    border-top: 1px solid #f9f7fe;
+    padding: 30px 0 0 0;
+    text-align: center;
+    font-size: 13px;
+    color: rgba( 0, 0, 0, 0.6);
+    
+}
+
+a {
+    color: #885df1;
+}
